# gbp_lander

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
db/: 001_init_leads.sql  002_init_accounts.sql  README.md
examples/: demo.py  demo_lander.html
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/: for-auto-repair.html  for-electricians.html  for-garage-door.html  for-hvac.html  for-pest-control.html  for-plumbers.html  for-roofers.html  for-tree-service.html
frontend/src/: App.jsx  Home.jsx  home.css  index.css  supabaseClient.js
marketing/meta-test/: ad-copy.md
scripts/: build_meta_test_ads.py  build_niche_pages.py  build_social_posts.py
server/: main.py
src/: ai_copy.py  brand_color.py  lander_builder.py  lead_store.py  places_client.py  url_guard.py  website_scraper.py
templates/: lander.html
